--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
                 <input class="form-control" id="AddNewUserName" type="text" placeholder="name"><br>
                 <input class="form-control" id="AddNewUserSurname" type="text" placeholder="surname"><br>
                 <input class="form-control" id="AddNewUserAge" type="number" placeholder="age"><br>
-                <input class="form-control" id="AddNewUserEmail" type="number" placeholder="email"><br>
+                <input class="form-control" id="AddNewUserEmail" type="text" placeholder="email"><br>
                 <input class="form-control" id="AddNewUserPassword" type="password" placeholder="password"><br>
                 <button class="btn btn-primary mb-2" type="button" id="addNewUserButton">Add new user</button>
             </form>
@@ -75,7 +75,7 @@
 <script src="webjars/jquery/3.7.1/jquery.js"></script>
 <script src="webjars/popper.js/1.12.9-1/popper.js"></script>
 <script src="webjars/bootstrap/4.5.3/js/bootstrap.min.js"></script>
-<script src="/static/js/app.js"></script>
+<!--<script src="/static/js/app.js"></script>-->
 
 <script src="/js/app.js"></script>
 </body>
